# LanSend

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  network.rs  peer.rs  server.rs  transfer.rs
