[package]
name = "lansend"
version = "0.1.0"
description = "LAN file transfer desktop app"
authors = ["alemax"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
dirs = "6"
if-addrs = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
http-body-util = "0.1"
futures-util = "0.3"

